[gd_scene load_steps=8 format=3 uid="uid://tfftn5pdg4sg"]

[ext_resource type="Script" uid="uid://ca3tuisy2mgkb" path="res://Combatant/Combatant.gd" id="1_7wqp3"]
[ext_resource type="Texture2D" uid="uid://ct5uj73kj2vch" path="res://Combatant/images/enemy_img.png" id="1_fs08w"]
[ext_resource type="Texture2D" uid="uid://dspuqvck32kp0" path="res://Combatant/images/progBack.png" id="2_ouxvt"]
[ext_resource type="Texture2D" uid="uid://dmlxeljdnoq8e" path="res://Combatant/images/progBg.png" id="3_7wqp3"]
[ext_resource type="Texture2D" uid="uid://dk1omy1lk4jcv" path="res://Combatant/images/progFill.png" id="4_2ev3f"]
[ext_resource type="PackedScene" uid="uid://baqjbd8m7wwga" path="res://SkillBar/SkillBar.tscn" id="6_2ev3f"]
[ext_resource type="Texture2D" uid="uid://c0uhvq0umoo4y" path="res://uiImgs/shieldImg.png" id="7_upith"]

[node name="Combatant" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_7wqp3")

[node name="EnemyImg" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_fs08w")

[node name="HealthBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = -36.0
offset_top = 357.0
offset_right = 314.0
offset_bottom = 407.0
max_value = 10.0
texture_under = ExtResource("3_7wqp3")
texture_over = ExtResource("2_ouxvt")
texture_progress = ExtResource("4_2ev3f")

[node name="HealthLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -36.0
offset_top = 360.0
offset_right = 313.0
offset_bottom = 405.0
theme_override_font_sizes/font_size = 30
text = "1000/1000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SkillBar" parent="." instance=ExtResource("6_2ev3f")]
layout_mode = 1
offset_left = -25.0
offset_top = 419.0
offset_right = -25.0
offset_bottom = 419.0
scale = Vector2(0.7, 0.7)

[node name="StatusContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 324.0
offset_top = 8.0
offset_right = 532.0
offset_bottom = 394.0
theme_override_constants/separation = 80

[node name="ShieldImg" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 314.0
offset_top = 345.0
offset_right = 389.0
offset_bottom = 420.0
texture = ExtResource("7_upith")

[node name="BlockAmtLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 319.0
offset_top = 364.0
offset_right = 380.0
offset_bottom = 399.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "150"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = -40.0
offset_right = 302.0
offset_bottom = 4.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "The Dangerous Monster"
horizontal_alignment = 1
vertical_alignment = 1
